syntax = "proto3";

import "google/protobuf/wrappers.proto";
import "domains/nutrition/models/nutrition_lifestyle_template.proto";

package domains.nutrition.services.base.nutrition_lifestyle_template;
option go_package = "github.com/kirvader/BodyController/domains/nutrition/services/base/nutrition_lifestyle_template/proto";

service NutritionLifestyleTemplate {
  	rpc CreateNutritionLifestyleTemplate(CreateNutritionLifestyleTemplateRequest) returns (CreateNutritionLifestyleTemplateResponse);
	rpc DeleteNutritionLifestyleTemplate(DeleteNutritionLifestyleTemplateRequest) returns (DeleteNutritionLifestyleTemplateResponse);
	rpc UpdateNutritionLifestyleTemplate(UpdateNutritionLifestyleTemplateRequest) returns (UpdateNutritionLifestyleTemplateResponse);

	rpc GetNutritionLifestyleTemplate(GetNutritionLifestyleTemplateRequest) returns (GetNutritionLifestyleTemplateResponse);
	rpc ListNutritionLifestyleTemplates(ListNutritionLifestyleTemplatesRequest) returns (ListNutritionLifestyleTemplatesResponse);
}

message CreateNutritionLifestyleTemplateRequest {
	domains.nutrition.models.NutritionLifestyleTemplate nutrition_lifestyle_template = 1;
};

message CreateNutritionLifestyleTemplateResponse {
	string nutrition_lifestyle_template_hex_id = 1;
};

message DeleteNutritionLifestyleTemplateRequest {
	string nutrition_lifestyle_template_hex_id = 1;
};

message DeleteNutritionLifestyleTemplateResponse {};

message UpdateNutritionLifestyleTemplateRequest {
	string nutrition_lifestyle_template_hex_id = 1;
	domains.nutrition.models.NutritionLifestyleTemplate new_nutrition_lifestyle_template_info = 2;
};

message UpdateNutritionLifestyleTemplateResponse {};

message GetNutritionLifestyleTemplateRequest {
	string nutrition_lifestyle_template_hex_id = 1;
};

message GetNutritionLifestyleTemplateResponse {
	domains.nutrition.models.NutritionLifestyleTemplate nutrition_lifestyle_template = 1;
};

message ListNutritionLifestyleTemplatesRequest {
	int32 page_size = 1;
	google.protobuf.StringValue last_page_token = 2;
};

message ListNutritionLifestyleTemplatesResponse {
	repeated domains.nutrition.models.NutritionLifestyleTemplate nutrition_lifestyle_templates = 1;
	google.protobuf.StringValue retrieved_page_token = 2;
};


